--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,6 @@ name = "pypi"
 [packages]
 pymongo = "*"
 fastapi = "*"
-uvicorn = {extras = ["standard"], version = "*"}
-strawberry-graphql = {extras = ["fastapi"], version = "*"}
 packages = "*"
 redis = "*"
 fastapi-utils = "*"
@@ -15,4 +13,12 @@ fastapi-utils = "*"
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.8"
+
+[packages.uvicorn]
+extras = [ "standard",]
+version = "*"
+
+[packages.strawberry-graphql]
+extras = [ "fastapi",]
+version = "*"
